--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,8 +14,8 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @item.user_id %>
+  <strong>Seller:</strong>
+  <%= @item.user.name %>
 </p>
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
