--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
   <strong>Role:</strong>
-  <%= @user.role_id %>
+  <%= @user.role.name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
